--- a/bomreader.css
+++ b/bomreader.css
@@ -1,3 +1,4 @@
+.song-list-wrap { margin-bottom: 2em; }
 
 .song-artist { color: gray; font-size: 80%; }
 .song-list { display: table; width: 100%;}
@@ -42,4 +43,48 @@
 
 .song-properties {
     padding: 4px;
+    border: 1px solid;
+}
+
+.song-movie {
+    float: left;
+    margin-right: 8px;
+}
+.song-attributes {
+    padding: 0 8px;
+    line-height: 180%;
+}
+
+.song-name {
+    cursor: pointer;
+}
+
+.song-attribute .attribute-name {
+    font-weight: bold;
+}
+
+.triangle-open {
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .255em;
+    vertical-align: .255em;
+    content: "";
+    border-top: .3em solid;
+    border-right: .3em solid transparent;
+    border-bottom: 0;
+    border-left: .3em solid transparent;
+}
+
+.triangle-close {
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .255em;
+    vertical-align: .1em;
+    content: "";
+    border-left: .3em solid;
+    border-top: .3em solid transparent;
+    border-right: 0;
+    border-bottom: .3em solid transparent;
 }
